# GEM_IN_VS

./: README.md  bridge.py  prompt.md  pyproject.toml  requirements.txt
config/: default.env
docs/: 00_SESSION_HADOVER.md  PROJECT_TRACKER.md  api_reference.md  commit-format-guide.md  developer_guide.md  troubleshooting.md  user_guide.md
docs/REFERENCES/: DOCUMENT_04.md  human_readable_plan.md  project_glossary.md
docs/REFERENCES/INCEPTION_PHASE/: CONCEPT.md  END_USER.md  MOSCOW.md
scripts/: install.py  performance_test.py  validate_setup.py
src/bridge/: error_handler.py  file_watcher.py  main.py  subprocess_manager.py  thread_coordinator.py
src/utils/: platform_config.py
tests/integration/: test_complete_workflow.py  test_cross_platform.py  test_error_recovery.py
tests/unit/: test_file_watcher.py  test_subprocess_manager.py  test_thread_coordinator.py
